[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draedon"
version = "1.1.0"
description = "Modular passive reconnaissance framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["recon", "osint", "security", "pentest", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0",
    "inquirer>=3.0",
    "python-whois>=0.8",
    "requests>=2.28",
    "dnspython>=2.3",
]

[project.urls]
Homepage = "https://github.com/Hybabybabyba/draedon"
Repository = "https://github.com/Hybabybabyba/draedon"
Issues = "https://github.com/Hybabybabyba/draedon/issues"
Changelog = "https://github.com/Hybabybabyba/draedon/releases"

[project.scripts]
draedon = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "modules*"]
